# LootMarshal

./: .gitignore  CHANGELOG.md  LICENSE  README.md  lootmarshal.py  pyproject.toml  requirements.txt  test.md
docs/: cli.md
lootmarshal/cli/: __init__.py  loottyper.py  main.py  session.py
lootmarshal/cli/commands/: __init__.py  connect.py  creds.py  secrets.py
lootmarshal/cli/utils/: colors.py  utils.py
lootmarshal/server/: logging.py  main.py
lootmarshal/server/handlers/: __init__.py  azurehandler.py  filehandler.py  handlercontext.py  handlers.py
lootmarshal/server/misc/: credparser.py
lootmarshal/server/models/: models.py
lootmarshal/server/routers/: connect.py  creds.py  misc.py  secrets.py
lootmarshal/settings/: __init__.py  cert.crt  lmsettings.py  server.pem  settings.env  tags.py
tests/: test_lootmarshal.py
